<resources>
    <string name="app_name">StudentManager</string>
    <string name="total_student_count">총 학생 수 : </string>
    <string name="student_id">학번 : </string>
    <string name="student_name">이름 : </string>
    <string name="register">등록</string>
    <string name="search">검색</string>
    <string name="remove">삭제</string>
    <string name="print_student_info">전체 보기</string>
    <string name="register_text">{학번}이 등록되었습니다.</string>
    <string name="remove_text">{학번}이 삭제되었습니다.</string>
    <string name="error_input_msg">입력된 학번을 다시 확인해주세요.</string>
</resources>