<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_student_count"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_total_student_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginStart="4dp"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_print_student_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/print_student_info" />

    <TextView
        android:id="@+id/tv_print_student_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:layout_marginTop="8dp" />

</LinearLayout>